--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -1,22 +1,63 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment 1</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link href="style.css" rel="stylesheet">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js" defer></script>
+  </head>
 
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="app.js" defer></script>
-</head>
-
-<body>
-  <div id="app">
-    
-  </div>
-</body>
-
+  <body>
+    <div id="app">
+      <div class="container">
+        <div class="bg-success rounded p-4 mt-5">
+          <h3 class="text-center text-white m-0">Assignment 1</h3>
+        </div>
+        <div class="p-3 mt-4 rounded border">
+          <!-- 1) Output your name-->
+          <h3 class="text-center text-success m-0">{{ name }}</h3>
+          <!-- 2) Output your age -->
+          <div class="rounded-pill bg-success p-2 mt-3 text-center">
+            <span class="text-white fw-bold">{{ age }}</span>
+          </div>
+          <!-- 3) Output your age + 5 -->
+          <div class="rounded-pill bg-success p-2 mt-3 text-center">
+            <span class="text-white fw-bold">{{ getNextAge() }}</span>
+          </div>
+          <!-- 4) Output random number (0 to 10) -->
+          <div class="rounded-pill bg-success p-2 mt-3 text-center">
+            <span class="text-white fw-bold"
+              >Favorite number: {{ random() }}</span
+            >
+          </div>
+          <!-- 5) Display some image  you found via Google -->
+          <div class="text-center mt-3">
+            <img v-bind:src="getImage()" alt="IMG" height="200px" />
+          </div>
+          <!-- 6) Pre-populate the input field with your name via "value" attribute -->
+          <div class="text-center mt-3">
+            <input
+              type="text"
+              class="form-control text-center"
+              v-bind:value="name"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
